# maestro

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  SKILL.md  knowledge-graph.md  project-scanner.md  pyproject.toml  rag-engine.md  routing-engine.md  semantic-index.md  skill-registry.md
.claude/: mcp.json
.claude-plugin/: plugin.json
docs/: architecture.md
hooks/: hooks.json
scripts/: maestro-mcp.sh
skills/maestro/: SKILL.md
src/maestro_rag/: __init__.py  cli.py  concept_graph.py  diffusion_ranker.py  engine.py  hjb_solver.py  mcp_server.py  query_classifier.py  setup.py
tests/: test_diffusion_ranker.py  test_hjb_solver.py  test_incremental_index.py  test_query_classifier.py
